sort 다이얼로그 argument 타입 변경

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -184,7 +184,7 @@
             app:argType="integer" />
         <argument
             android:name="fragmentType"
-            app:argType="string" />
+            app:argType="integer" />
         <argument
             android:name="navGraphId"
             app:argType="integer" />
