--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -1,91 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
-            name="category"
-            type="com.example.project_myfit.data.model.Category" />
+            name="categoryHolder"
+            type="com.example.myfit.ui.dialog.tree.holder.TreeCategoryHolder" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/layoutFolderIcon"
+            <include
+                android:id="@+id/prefix"
+                layout="@layout/item_tree_include_prefix"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingVertical="@dimen/_8sdp">
+                android:layout_marginVertical="@dimen/_8sdp"
+                app:treeHolder="@{categoryHolder}" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iconArrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_4sdp"
-                    android:alpha="0.8"
-                    app:srcCompat="@drawable/icon_triangle_right" />
+            <include
+                android:id="@+id/tv"
+                layout="@layout/item_tree_include_text_view"
+                app:textSize="@{@dimen/_11sdp}"
+                app:treeHolder="@{categoryHolder}" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iconFolder"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.8"
-                    app:srcCompat="@drawable/icon_folder" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvCategoryName"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:text="@{category.categoryName}"
-                android:textSize="@dimen/_11sdp"
-                tools:text="Short Sleeve" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvCurrentPosition"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:alpha="0.5"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:text="@string/tree_current_position"
-                android:textSize="@dimen/_6sdp"
-                android:visibility="gone" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvContentsSize"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="@dimen/_6sdp"
-                android:layout_marginVertical="@dimen/_2sdp"
-                android:alpha="0.6"
-                android:textSize="@dimen/_6sdp"
-                tools:text="20" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/iconAdd"
-                setAddIcon2="@{category.categoryName}"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:alpha="0.8"
-                tools:src="@drawable/icon_add"
-                android:paddingStart="0dp"
-                android:paddingEnd="@dimen/_16sdp" />
+            <include
+                android:id="@+id/postfix"
+                layout="@layout/item_tree_include_postfix"
+                app:treeHolder="@{categoryHolder}" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <View
