--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
-            name="folder"
-            type="com.example.project_myfit.data.model.Folder" />
+            name="folderHolder"
+            type="com.example.myfit.ui.dialog.tree.holder.TreeFolderHolder" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_marginStart="@{folderHolder.value.margin}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -18,76 +20,27 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
+            android:layout_marginStart="@dimen/_12sdp"
             android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/layoutFolderIcon"
+            <include
+                android:id="@+id/prefix"
+                layout="@layout/item_tree_include_prefix"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingVertical="@dimen/_4sdp">
+                android:layout_marginVertical="@dimen/_4sdp"
+                app:treeHolder="@{folderHolder}" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iconArrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/_16sdp"
-                    android:alpha="0.8"
-                    app:srcCompat="@drawable/icon_triangle_right" />
+            <include
+                android:id="@+id/tv"
+                layout="@layout/item_tree_include_text_view"
+                app:textSize="@{@dimen/_10sdp}"
+                app:treeHolder="@{folderHolder}" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iconFolder"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:alpha="0.8"
-                    app:srcCompat="@drawable/icon_folder" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvFolderName"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:text="@{folder.folderName}"
-                android:textSize="@dimen/_10sdp"
-                tools:text="폴더 1" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvCurrentPosition"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="@dimen/_4sdp"
-                android:alpha="0.5"
-                android:gravity="bottom"
-                android:maxLines="1"
-                android:paddingBottom="@dimen/_8sdp"
-                android:text="@string/tree_current_position"
-                android:textSize="@dimen/_6sdp"
-                android:visibility="gone" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvContentsSize"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="@dimen/_6sdp"
-                android:layout_marginVertical="@dimen/_2sdp"
-                android:alpha="0.6"
-                android:textSize="@dimen/_6sdp"
-                tools:text="20" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/iconAdd"
-                setAddIcon2="@{folder.folderName}"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:alpha="0.8"
-                tools:src="@drawable/icon_add"
-                android:paddingStart="0dp"
-                android:paddingEnd="@dimen/_16sdp" />
+            <include
+                android:id="@+id/addIcon"
+                layout="@layout/item_tree_include_postfix"
+                app:treeHolder="@{folderHolder}" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <View
