--- a/app/src/main/res/layout/item_tree_include_prefix.xml
+++ b/app/src/main/res/layout/item_tree_include_prefix.xml
@@ -12,7 +12,7 @@
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/layoutFolderIcon"
+        android:id="@+id/layout"
         toggleNode="@{treeHolder}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
