폴더아이콘 클릭 관련 코드 수정

--- a/app/src/main/res/layout/item_tree_include_prefix.xml
+++ b/app/src/main/res/layout/item_tree_include_prefix.xml
@@ -13,7 +13,7 @@
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/layout"
-        toggleNode="@{treeHolder}"
+        android:onClick="@{() -> treeHolder.toggleNode()}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
