--- a/app/src/main/res/layout/title_action_mode.xml
+++ b/app/src/main/res/layout/title_action_mode.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="actionModeImpl"
+            type="com.example.myfit.util.ActionModeImpl" />
+    </data>
+
     <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -12,6 +20,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:alpha="0.8"
             android:buttonTint="?colorControlNormal"
+            android:onClick="@{actionModeImpl::allSelectClick}"
             android:scaleX="0.9"
             android:scaleY="0.9" />
 
