--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewPagerVH"
+            type="com.example.myfit.util.adapter.viewholder.ViewPagerVH" />
+    </data>
+
     <FrameLayout
         android:background="@android:color/transparent"
         android:layout_width="match_parent"
@@ -10,6 +17,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
+            holder="@{viewPagerVH}"
             android:nestedScrollingEnabled="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
